--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    text-align: center;
+    padding: 20px; /* Para melhorar a exibição no mobile */
+    box-sizing: border-box;
 }
 
 .container {
@@ -13,8 +16,21 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     text-align: center;
+}
+
+.message {
+    margin-bottom: 20px;
+}
+
+.message p {
+    margin: 10px 0;
+}
+
+.center {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
 }
 
 .container button {
@@ -33,15 +49,19 @@ body {
 
 .lyrics-container {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     text-align: center;
     padding: 0 20px; /* Para melhorar a exibição no mobile */
+    box-sizing: border-box;
 }
 
 .lyrics-container p {
     max-width: 600px;
     line-height: 1.6;
     white-space: pre-wrap;
+    text-align: center;
+    margin-top: 20px;
 }
