--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f8ff; /* Azul bem clarinho */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     padding: 20px; /* Para melhorar a exibição no mobile */
     box-sizing: border-box;
@@ -17,6 +18,7 @@ body {
     align-items: center;
     justify-content: center;
     text-align: center;
+    flex: 1;
 }
 
 .message {
@@ -52,7 +54,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
     text-align: center;
     padding: 0 20px; /* Para melhorar a exibição no mobile */
     box-sizing: border-box;
@@ -90,7 +92,7 @@ body {
     flex-direction: column;
     align-items: flex-end;
     position: absolute;
-    top: 40px;
+    top: 60px;
     right: 0;
     background-color: #ffffff;
     border: 1px solid #ccc;
