--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
 }
 
 .container button {
-    background-color: #008cba; /* Cor do botão */
+    background-color: #715732; /* Cor do botão */
     color: white;
     padding: 15px 32px;
     text-align: center;
