--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 }
 
 .menu-button {
-    background-color: #008cba; /* Cor do botão */
+    background-color: #715732; /* Cor do botão */
     color: white;
     padding: 10px 20px;
     text-align: center;
@@ -102,7 +102,7 @@ body {
 }
 
 .menu-content button {
-    background-color: #008cba; /* Cor do botão */
+    background-color: #715732; /* Cor do botão */
     color: white;
     padding: 10px 20px;
     text-align: center;
