--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f0f8ff; /* Azul bem clarinho */
+    background-color: #7A5F3D; /* Cor dos olhos dela */
     display: flex;
     flex-direction: column;
     justify-content: center;
