--- a/stylemastermind.css
+++ b/stylemastermind.css
@@ -16,3 +16,26 @@ h1 {
 canvas {
     background-color: #34495e;
 }
+
+button {
+    margin: 5px;
+    padding: 10px 20px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#controls {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+}
+
+#controls button {
+    width: 80px;
+    margin: 5px 0;
+}
+
+#controls > button:nth-child(2) {
+    margin: 5px;
+}
